--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_BASEURL=http://localhost:5000
+REACT_APP_BACKEND_BASEURL=https://mern-full-stack-api.vercel.app
 GENERATE_SOURCEMAP=false
